tests/rosetta/out/Rust/active-directory-search-for-a-user.rs
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
fn main() {
    fn search_user(directory: std::collections::HashMap<&'static str, Vec<&'static str>>, username: &'static str) -> Vec<&'static str> {
        return *directory.get(&username).unwrap();
    }
    fn main() -> () {
        let client = { let mut m = std::collections::BTreeMap::new(); m.insert("Base", "dc=example,dc=com"); m.insert("Host", "ldap.example.com"); m.insert("Port", 389); m.insert("GroupFilter", "(memberUid=%s)"); m };
        let directory = { let mut m = std::collections::BTreeMap::new(); m.insert("username", vec!["admins", "users"]); m.insert("john", vec!["users"]); m };
        let groups = search_user(directory, "username");
        if groups.len() as i32 > 0 {
            let mut out = String::from("Groups: [");
            let mut i = 0;
            while i < groups.len() as i32 {
                out = format!("{}{}", format!("{}{}", format!("{}{}", out, """), groups[i as usize]), """);
                if i < groups.len() as i32 - 1 {
                    out += ", ";
                }
                i += 1;
            }
            out += "]";
            println!("{}", vec![format!("{}", out)].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
        } else {
            println!("User not found");
        }
    }
    main();
}
